--- a/index.html
+++ b/index.html
@@ -4,10 +4,94 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <title>QuoteBook</title>
   </head>
   <body>
-
+    <header>
+      <h1>QuoteBook</h1>
+    </header>
+    <main>
+      <section class="quotes">
+        <div class="quotes__inner">
+          <h2>Quotes</h2>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corrupti rem repellat illum ipsum molestiae cumque debitis
+                aspernatur! Non nobis asperiores exercitationem doloremque
+                debitis. Consectetur qui inventore aperiam commodi.
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corr
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corrupti rem repellat illum ipsum molestiae cumque debitis
+                aspernatur! Non nobis asperiores exercitationem doloremque
+                debitis. Consectetur qui inventore aperiam commodi. Lorem ipsum
+                dolor sit amet consectetur adipisicing elit. Sed veniam vitae
+                voluptatem inventore nesciunt quisquam, optio, esse dolor
+                eligendi ratione temporibus iure mollitia. Debitis consequatur
+                illum sed molestiae deleniti totam.
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corrupti rem repellat illum ipsum molestiae cumque debitis
+                aspernatur! Non nobis asperiores exercitationem doloremque
+                debitis. Consectetur qui inventore aperiam commodi.
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+          <h2>Quotes but different</h2>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corrupti rem repellat illum ipsum molestiae cumque debitis
+                aspernatur! Non nobis asperiores exercitationem doloremque
+                debitis. Consectetur qui inventore aperiam commodi.
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+          <div class="quote__content">
+            <div class="quote__text">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo
+                quam corrupti rem repellat illum ipsum molestiae cumque debitis
+                aspernatur! Non nobis asperiores exercitationem doloremque
+                debitis. Consectetur qui inventore aperiam commodi.
+              </p>
+            </div>
+            <div class="quote__name">-Beanor</div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
